# django_drf-auth

./: README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
add_data/: admin.py  models.py  permissions.py  serializer.py  urls.py  views.py
add_data/migrations/: 0001_initial.py
first_api/: asgi.py  settings.py  urls.py  wsgi.py
